# AudioConcat

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  audioconcat.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  setup_commands.py  tox.ini
.github/workflows/: gh-pages.yml  tests.yml
audioconcat/: __init__.py  audio_files.py  concat.py  file_system.py  sub_commands.py  util.py
docs/: conf.py  index.rst
docs/manual/: folder_structure.md  getting_started.md  getting_started_for_developers.md
src/: requirements.txt
src/audioconcat/: __main__.py  audio_files.py  concat.py  file_system.py  sub_commands.py
tests/: __init__.py
tests/audioconcat/: test_file_system.py  test_util.py
tests/unit/test_audioconcat/: test_file_system.py
tools/: pylintrc
